feat: add sorting support to paginated recipe search
